--- a/webapp/view/Register.view.xml
+++ b/webapp/view/Register.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-	controllerName="sap.ui.demo.walkthrough.controller.LogReg"
+	controllerName="sap.ui.demo.walkthrough.controller.Register"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
 		xmlns:core="sap.ui.core">
