--- a/webapp/view/ForgotPass.view.xml
+++ b/webapp/view/ForgotPass.view.xml
@@ -2,96 +2,104 @@
 	controllerName="sap.ui.demo.walkthrough.controller.ForgotPass"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
-	xmlns:core="sap.ui.core"
 >
-<Page 
-		class="backgroundGradient">
+	<Page class="backgroundGradient">
 		<customHeader>
-           <Bar>
+			<Bar>
 				<contentLeft>
 					<Button
 						icon="sap-icon://nav-back"
 						press=".navBack"
-						class="sapUiSmallMarginEnd"/>
-					<Image src="../resources/MHP_Logo_RGB.svg" height="75%" />
+						class="sapUiSmallMarginEnd"
+					/>
+					<Image
+						src="../resources/MHP_Logo_RGB.svg"
+						height="75%"
+					/>
 				</contentLeft>
-           </Bar>
-      </customHeader>
-<FlexBox
+			</Bar>
+		</customHeader>
+		<FlexBox
 			width="1200px"
 			alignItems="Center"
-			justifyContent="Center">
-		
-		<Image src="../resources/MHP_login.png" height="280px" class="imgShadow"/>
-
-		<FlexBox
+			justifyContent="Center"
+		>
+			<Image
+				src="../resources/MHP_login.png"
+				height="280px"
+				class="imgShadow"
+			/>
+			<FlexBox
 				height="650px"
 				alignItems="Center"
-				justifyContent="Center">
-
-			<VBox fitContainer="true">
-			<layoutData>
-				<FlexItemData growFactor="7" />
-			</layoutData>
-			<Label
+				justifyContent="Center"
+			>
+				<VBox fitContainer="true">
+					<layoutData>
+						<FlexItemData growFactor="7"/>
+					</layoutData>
+					<Label
 						text="{i18n>userText}"
 						labelFor="usernameTextFP"
-						required = "true"
+						required="true"
 					/>
-				<Input
-					id="usernameTextFP"
-					placeholder="{i18n>enterUsername}"
-					valueLiveUpdate="true"
-					width="450px"
-					class="shadow"
-					value="{ path: '/username',type: '.customUserType'}"
-				/>
-				<Label
+					<Input
+						id="usernameTextFP"
+						placeholder="{i18n>enterUsername}"
+						valueLiveUpdate="true"
+						width="450px"
+						class="shadow"
+						value="{ path: '/username',type: '.customUserType'}"
+					/>
+					<Label
 						text="{i18n>emailText}"
-						labelFor="UsernameRegisterField"
-						required = "true"
+						labelFor="emailTextFP"
+						required="true"
 					/>
-				<Input
-					id="emailTextFP"
-					placeholder="{i18n>enterMail}"
-					valueLiveUpdate="true"
-					width="450px"
-					class="shadow"
-					value="{ path: '/email',type: '.customEMailType'}"
-				/>
+					<Input
+						id="emailTextFP"
+						placeholder="{i18n>enterMail}"
+						valueLiveUpdate="true"
+						width="450px"
+						class="shadow"
+						value="{ path: '/email',type: '.customEMailType'}"
+					/>
 					<Label
 						text="{i18n>passText}"
 						labelFor="passwordTextFP"
-						required = "true"
+						required="true"
 					/>
-				<Input
-					id="passwordTextFP"
-					placeholder="{i18n>enterNewPassword}"
-					valueLiveUpdate="true"
-					width="450px"
-					type="Password"
-					class="shadow"
-					value="{ path: '/newpassword',type: '.customNewPasswordType'}"
-				/>
-
-
-				<HBox fitContainer="true" alignItems="Stretch">
-				<layoutData>
-					<FlexItemData growFactor="4" />
-				</layoutData>
-				<VBox alignItems="Center" width="400px">
-				<Button
-					text="{i18n>changePasswordBtn}"
-					class="sapUiTinyMarginTop "
-					width="300px"
-					type="Emphasized"
-					press="onPressForgotPass"
-				/>
-			</VBox>
-			</HBox>
-		</VBox>
+					<Input
+						id="passwordTextFP"
+						placeholder="{i18n>enterNewPassword}"
+						valueLiveUpdate="true"
+						width="450px"
+						type="Password"
+						class="shadow"
+						value="{ path: '/newpassword',type: '.customNewPasswordType'}"
+					/>
+					<HBox
+						fitContainer="true"
+						alignItems="Stretch"
+					>
+						<layoutData>
+							<FlexItemData growFactor="4"/>
+						</layoutData>
+						<VBox
+							alignItems="Center"
+							width="450px"
+						>
+							<Button
+								text="{i18n>changePasswordBtn}"
+								class="sapUiTinyMarginTop"
+								width="400px"
+								type="Emphasized"
+								press="onPressForgotPass"
+							/>
+						</VBox>
+					</HBox>
+				</VBox>
+			</FlexBox>
 		</FlexBox>
-
-	</FlexBox>	
 	</Page>
 </mvc:View>
