--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -37,6 +37,16 @@ html[dir="rtl"] .myAppDemoWT .myCustomButton.sapMBtn {
    background: rgb(67, 87, 105);
  }
 
+ .borderColourBlue{
+   border-style: solid;
+   border-width: 2px;
+   border-color: rgb(67, 87, 105);
+ }
+
  .textGray{
    color: #d9d9d9 !important;
  }
+
+.colorBlack{
+   color: #000000 !important;
+}
