Details View Done

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -47,6 +47,6 @@ html[dir="rtl"] .myAppDemoWT .myCustomButton.sapMBtn {
    color: #d9d9d9 !important;
  }
 
-.colorBlack{
+.textBlack{
    color: #000000 !important;
 }
