--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -62,3 +62,19 @@ html[dir="rtl"] .myAppDemoWT .myCustomButton.sapMBtn {
 .textBlue{
    color: #a6d2da !important;
  }
+
+
+ 
+.blueButton .sapMBtnInner.sapMBtnDefault {
+  
+  background-color: #3333ff !important;
+  color: white !important;
+  
+}
+
+
+.blueButton .sapMBtnInner.sapMBtnDefault:hover {
+  background-color: #0000ff !important;
+  color: white !important;
+  transition:0.2s;
+}
