--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -3,7 +3,7 @@
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
 >
-	<Page class="backgroundGradient">
+	<Page class="backgroundGradient2">
 		<customHeader>
            	<Bar>
                 <contentRight>
