--- a/webapp/view/ManagerFeedback.view.xml
+++ b/webapp/view/ManagerFeedback.view.xml
@@ -10,7 +10,7 @@
 				<contentLeft>
 					<Button
 						icon="sap-icon://nav-back"
-						press=".navBack"
+						press=".onNavBack"
 						class="sapUiSmallMarginEnd"/>
 					<Image src="../resources/MHP_Logo_RGB.svg" height="75%" press=".toMain"/>
 				</contentLeft>
